[gd_scene load_steps=2 format=3 uid="uid://bvn5b8xr7qyk8"]

[ext_resource type="Script" path="res://scripts/SaveLoadDialog.gd" id="1_7hkjm"]

[node name="SaveLoadDialog" type="AcceptDialog"]
title = "Save & Load Game"
initial_position = 1
size = Vector2i(600, 400)
script = ExtResource("1_7hkjm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Save & Load Game"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveLabel" type="Label" parent="VBoxContainer/SaveSection"]
layout_mode = 2
text = "Create New Save:"

[node name="SaveInputContainer" type="HBoxContainer" parent="VBoxContainer/SaveSection"]
layout_mode = 2

[node name="SaveNameInput" type="LineEdit" parent="VBoxContainer/SaveSection/SaveInputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter save name (leave empty for timestamp)"

[node name="SaveButton" type="Button" parent="VBoxContainer/SaveSection/SaveInputContainer"]
layout_mode = 2
text = "Save"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LoadSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LoadLabel" type="Label" parent="VBoxContainer/LoadSection"]
layout_mode = 2
text = "Existing Saves:"

[node name="SavesScrollContainer" type="ScrollContainer" parent="VBoxContainer/LoadSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="SavesList" type="ItemList" parent="VBoxContainer/LoadSection/SavesScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadButtonContainer" type="HBoxContainer" parent="VBoxContainer/LoadSection"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="VBoxContainer/LoadSection/LoadButtonContainer"]
layout_mode = 2
text = "Load"

[node name="DeleteButton" type="Button" parent="VBoxContainer/LoadSection/LoadButtonContainer"]
layout_mode = 2
text = "Delete"

[node name="Spacer" type="Control" parent="VBoxContainer/LoadSection/LoadButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="VBoxContainer/LoadSection/LoadButtonContainer"]
layout_mode = 2
text = "Cancel"